--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -185,7 +185,7 @@
 % ALSO: \rcollength is the width of the right column of the table 
 %       (adjust it to your liking; default is 1.85in).
 %
-\newlength{\rcollength}\setlength{\rcollength}{3.5in}%
+\newlength{\rcollength}\setlength{\rcollength}{4.0in}%
 %
 
 
@@ -201,7 +201,8 @@
 Domicilio:& \href{https://www.google.com.uy/maps/@-34.8822456,-55.0512462,17z?hl=es-419}{Juana de Am\'{e}rica esq. Para\'{i}so}, Pta. Ballena, Uruguay\\
 Web: & \href{http://marcelo-forets.fr}{\url{http://marcelo-forets.fr}}\\
 Celular: & (+598)(0)92-079-370 \\
-Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} %\\
+Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} \\
+CVUy: & \href{https://exportcvuy.anii.org.uy/cv/?ae95302988f85483fe4321b03ff897a096b3b73016ca199f83bfaf5e673ba15cd8ea7e1417176b8137e2cf5a55409355ec23830659e3efbb6a2bd068aea4b231}{Link al CVUy web (incluye lista completa de publicaciones)}%\\
 \end{tabular}
 
 %\section{}
@@ -221,7 +222,7 @@ Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} %\\
 \vspace{-0.4cm}
 
 % perfil cientifico
-Marcelo Forets es un investigador que trabaja en métodos computacionales, físicos y matemáticos, aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
+Marcelo Forets es un Doctor en Matemáticas Aplicadas que trabaja en métodos matemá-ticos, físicos y computacionales aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
 Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las áreas de desarrollo del país. 
 
 %\section{Cargo actual}
@@ -287,22 +288,7 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 
 \end{outerlist}
 
-\section{Conocimiento Técnico}
 
-\vspace{-0.75cm}
-
-\begin{itemize}
-	\item[-] Software de gestión de proyectos y control de revisión (git). Sistemas de preparación de documentos: LaTeX. Sistemas operativos: Linux, MacOSX, Windows.
-	\item[-] Lenguages de programación científica: Julia, Python/NumPy/SciPy, Cython, MATLAB. Lenguages de programación de sistemas: C, Fortran, Java.
-	\item[-] Manejo fluido (oral y escrito) del Español, Inglés y Francés. 
-\end{itemize}
-
-\section{Distinciones} 
-\begin{itemize}
-	\item[-] Beca de doctorado ``Allocations président pour des étudiants extérieurs d'excellence'' otorgado por la Universidad Joseph Fourier, Grenoble, Francia (2013-2015). 
-	\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
-	\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). G. Abal, R. Donangelo.  
-\end{itemize}
 
 %\section{Idiomas}
 %
@@ -319,7 +305,7 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 %	\item[-] Clasificación: 10.04/12 (1er rango por año de obtención de diploma)
 %	
 %\end{outerlist}
-\clearpage
+%\clearpage
 \section{Experiencia profesional}
 
 \vspace{-0.4cm}
@@ -331,16 +317,28 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 %\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
 %\end{itemize}
 
+\href{http://www.utec.edu.uy}{\textbf{Univeresidad Tecnológica del Uruguay}}, Durazno, Uruguay
+\hfill\textbf{2018--actual}
+
+\begin{outerlist}
+	\item[]\textit{Enseñanza}
+	\begin{innerlist}
+		\item[-] Docente Encargado (20hs/sem) en la carrera de Ingeniería en Energías Renovables. Asignaturas: Energía-Mecánica y Mecánica de los Fluidos.
+	\end{innerlist}
+\end{outerlist}
+
+\blankline
+
 \href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Grenoble Alpes}}, Grenoble, France
 \hfill\textbf{2016--2017}
 
 \begin{outerlist}
 	\item[]\textit{Investigación \& Proyectos}
 	\begin{innerlist}
-		\item[-] Investigador de Post-Doctorado en el laboratorio \href{http://www-verimag.imag.fr/?lang=en}{VERIMAG}, grupo TEMPO (Timed and Hybrid Systems group). 
+		\item[-] 2 años de Post-Doctorado como investigador en en el Laboratorio \href{http://www-verimag.imag.fr/?lang=en}{VERIMAG}, grupo TEMPO (Timed and Hybrid Systems group). 
 		
 		Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
-		\item[-] NANO2017. Estudio de la variabilidad de circuitos electrónicos analógicos. Colaboración entre la Univ. Grenoble Alpes y la compañía ST Microelectronics.
+		\item[-] Estudio de la variabilidad de circuitos electrónicos analógicos en el proyecto europeo NANO2017. Colaboración entre la Univ. Grenoble Alpes y la compañía ST Microelectronics.
 	\end{innerlist}
 \end{outerlist}
 
@@ -457,7 +455,25 @@ Palabras clave: optimización estocástica, programación no lineal.
     \end{enumerate}
 }
 
+\section{Distinciones} 
 
+\vspace{-0.75cm}
+
+\begin{itemize}
+	\item[-] Beca de doctorado ``Allocations président pour des étudiants extérieurs d'excellence'' otorgado por la Universidad Joseph Fourier, Grenoble, Francia (2013-2015). 
+	\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
+	\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). G. Abal, R. Donangelo.  
+\end{itemize}
+
+\section{Conocimiento Técnico}
+
+\vspace{-0.75cm}
+
+\begin{itemize}
+	\item[-] Software de gestión de proyectos y control de revisión (git). Sistemas de preparación de documentos: LaTeX. Sistemas operativos: Linux, MacOSX, Windows.
+	\item[-] Lenguages de programación científica: Julia, Python/NumPy/SciPy, Cython, MATLAB. Lenguages de programación de sistemas: C, Fortran, Java.
+	\item[-] Manejo fluido (oral y escrito) del Español, Inglés y Francés. 
+\end{itemize}
 
 \section{Publicaciones en conferencias con revisión por pares  (selección)}
 
