--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -198,11 +198,12 @@
 %E-mail trabajo: & \href{mailto:marcelo.forets-irurtia@univ-grenoble-alpes.fr}{marcelo.forets-irurtia@univ-grenoble-alpes.fr} \\
 %Nacionalidad: & Uruguaya \\
 %Edad y situaci\'on  familiar: & 29, Casado
-Domicilio:& \href{https://www.google.com.uy/maps/@-34.8822456,-55.0512462,17z?hl=es-419}{Juana de Am\'{e}rica esq. Para\'{i}so}, Pta. Ballena, Uruguay\\
+Domicilio:& \href{https://www.google.com.uy/maps/@-34.8822456,-55.0512462,17z?hl=es-419}{Juana de Am\'{e}rica y Para\'{i}so}, Punta Ballena, Uruguay\\
 Web: & \href{http://marcelo-forets.fr}{\url{http://marcelo-forets.fr}}\\
 Celular: & (+598)(0)92-079-370 \\
-Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} \\
-CVUy: & \href{https://exportcvuy.anii.org.uy/cv/?ae95302988f85483fe4321b03ff897a096b3b73016ca199f83bfaf5e673ba15cd8ea7e1417176b8137e2cf5a55409355ec23830659e3efbb6a2bd068aea4b231}{Link al CVUy web (incluye lista completa de publicaciones)}%\\
+Email personal: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} \\
+Email institucional: & \href{mailto:marcelo.forets@utec.edu.uy}{marcelo.forets@utec.edu.uy} \\
+CVUy: & \href{https://exportcvuy.anii.org.uy/cv/?ae95302988f85483fe4321b03ff897a096b3b73016ca199f83bfaf5e673ba15cd8ea7e1417176b8137e2cf5a55409355ec23830659e3efbb6a2bd068aea4b231}{Link al CVUy web}%\\
 \end{tabular}
 
 %\section{}
@@ -222,8 +223,8 @@ CVUy: & \href{https://exportcvuy.anii.org.uy/cv/?ae95302988f85483fe4321b03ff897a
 \vspace{-0.4cm}
 
 % perfil cientifico
-Marcelo Forets es un Doctor en Matemáticas Aplicadas que trabaja en métodos matemá-ticos, físicos y computacionales aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
-Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las áreas de desarrollo del país. 
+Marcelo Forets es un Doctor en Matemáticas Aplicadas que trabaja en métodos computacionales, matemáticos y físicos aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
+Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las áreas de desarrollo del país.
 
 %\section{Cargo actual}
 %\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Grenoble Alpes}}, Grenoble, France
@@ -254,11 +255,11 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 \begin{outerlist}
 \item[-] {\textbf{Doctorat en Math\'ematiques et Informatique}}% à l'\'Ecole Doctorale MSTII
 	\begin{innerlist}
-		\item[-] Escuela Doctoral: MSTII (Matemáticas, Ciencias de la Tecnología y de la Informatión e Informática)
+		\item[-] Doctor en Matem\'{a}ticas e Inform\'{a}tica por la Escuela Doctoral MSTII (Matemáticas, Ciencias de la Tecnología y de la Informatión e Informática).
         \item[-] Laboratorio: \href{http://www.liglab.fr/}{Laboratoire d'Informatique de Grenoble}, equipo \href{http://capp.imag.fr/wordpress/}{CAPP}.
         \item[-] Título de la tesis: \href{https://tel.archives-ouvertes.fr/tel-01253797}{\emph{Marches Quantiques et M\'ecanique Quantique Relativiste.}} (Caminatas Cuánticas y Mecánica Cuántica Relativista.)
-	\item[-] Directores de tesis: \href{http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/}{Pablo Arrighi} (director) y \href{http://www-fourier.ujf-grenoble.fr/~joye/}{Alain Joye} (co-tutor).
-	\item[-] Palabras clave: computación cuántica, mecánica cuántica discreta, simulación de sistemas cuánticos en interacción, análisis espectral, caminatas cuánticas, mecánica cuántica relativista.
+	\item[-] Directores de tesis: \href{http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/}{Pablo Arrighi}, Professor of Informatics and Interactions, Aix-Marseille University, y \href{http://www-fourier.ujf-grenoble.fr/~joye/}{Alain Joye}, Professeur de l'Institut de Fourier, Universit\'{e} Grenobl\'{e} Alpes.
+	\item[-] Palabras clave: computación cuántica, mecánica cuántica relativista, simulación de sistemas cuánticos en interacción, análisis espectral, caminatas cuánticas.
 	\end{innerlist}
 
 
@@ -317,34 +318,53 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 %\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
 %\end{itemize}
 
-\href{http://www.utec.edu.uy}{\textbf{Univeresidad Tecnológica del Uruguay}}, Durazno, Uruguay
+\href{http://www.utec.edu.uy}{\textbf{UTEC Univeresidad Tecnológica}}, ITR Centro-Sur, Uruguay
 \hfill\textbf{2018--actual}
 
 \begin{outerlist}
 	\item[]\textit{Enseñanza}
 	\begin{innerlist}
-		\item[-] Docente Encargado (20hs/sem) en la carrera de Ingeniería en Energías Renovables. Asignaturas: Energía-Mecánica y Mecánica de los Fluidos.
+		\item[-] Docente Encargado en la carrera de Ingeniería en Energías Renovables. Unidades curriculares: Energía-Mecánica y Mecánica de los Fluidos e Hidr\'{a}ulica.
+	\end{innerlist}
+	\item[]\textit{Investigación \& Proyectos}
+\begin{innerlist}
+	\item[-] L\'{i}nea: Control y Confiabilidad de Sistemas de Energ\'{i}as Renovables.
+\end{innerlist}
+\end{outerlist}
+
+
+\blankline
+
+\href{https://ic.edu.uy/}{\textbf{Intenational College}}, Punta del Este, Uruguay
+\hfill\textbf{2018--actual}
+
+\begin{outerlist}
+	\item[]\textit{Enseñanza}
+	\begin{innerlist}
+		\item[-] Docente de Mathematics en los cursos S3-S5 para el examen internacional IGCSE.
 	\end{innerlist}
 \end{outerlist}
 
 \blankline
 
-\href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Grenoble Alpes}}, Grenoble, France
+
+\href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Grenoble Alpes}}, Grenoble, Francia
 \hfill\textbf{2016--2017}
 
 \begin{outerlist}
 	\item[]\textit{Investigación \& Proyectos}
 	\begin{innerlist}
-		\item[-] 2 años de Post-Doctorado como investigador en en el Laboratorio \href{http://www-verimag.imag.fr/?lang=en}{VERIMAG}, grupo TEMPO (Timed and Hybrid Systems group). 
+		\item[-] Post-doctorado en el Laboratorio \href{http://www-verimag.imag.fr/?lang=en}{VERIMAG}, grupo TEMPO, a cargo de los Prof. Goran Frehse y Oded Maler.
 		
-		Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
-		\item[-] Estudio de la variabilidad de circuitos electrónicos analógicos en el proyecto europeo NANO2017. Colaboración entre la Univ. Grenoble Alpes y la compañía ST Microelectronics.
+		\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
+	
+		\item[-] Estudio de la variabilidad de circuitos electrónicos analógicos en el proyecto europeo NANO2017. Colaboración entre la Univ. Grenoble Alpes y ST Microelectronics.
 	\end{innerlist}
 \end{outerlist}
 
 \blankline
 
-\href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Joseph Fourier}}, Grenoble, France
+\href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Joseph Fourier}}, Grenoble, Francia
 \hfill\textbf{2013--2015}
 
 \begin{outerlist}
@@ -460,9 +480,10 @@ Palabras clave: optimización estocástica, programación no lineal.
 \vspace{-0.75cm}
 
 \begin{itemize}
+	\item[-] Primer premio ``Most Promising Research Award'', con un premio de BOSCH, en el workshop Applied Verification for Continuous and Hybrid Systems (\href{https://cps-vo.org/group/ARCH}{ARCH}) del International Federation of Automatic Control (IFAC) conference on \href{https://www.cs.ox.ac.uk/conferences/ADHS18/}{Analysis and Design of Hybrid Systems}, Londres, UK (2018). 
 	\item[-] Beca de doctorado ``Allocations président pour des étudiants extérieurs d'excellence'' otorgado por la Universidad Joseph Fourier, Grenoble, Francia (2013-2015). 
 	\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
-	\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). G. Abal, R. Donangelo.  
+	\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). Tutores: G. Abal, R. Donangelo.  
 \end{itemize}
 
 \section{Conocimiento Técnico}
@@ -481,8 +502,9 @@ Palabras clave: optimización estocástica, programación no lineal.
 
 \begin{outerlist}
 %	\begin{benumerate}{3}
+
 		\item[-] \emph{Occupation measure methods for modelling and analysis of biological hybrid systems.} Alexandre Rocca, M. F., Victor Magron, Eric Fanchon, Thao Dang.
-		In \href{https://www.cs.ox.ac.uk/conferences/ADHS18/}{6th IFAC Conference on Analysis and Design of Hybrid Systems (ADHS 18)}, Oxford, United Kingdom (2018). Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures.
+		In \href{https://www.cs.ox.ac.uk/conferences/ADHS18/}{6th IFAC Conference on Analysis and Design of Hybrid Systems (ADHS 18)}, Oxford, UK (2018). Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures.
 
 		\item[-] \emph{Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices.} Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry.
 		In \href{https://www.hscc2018.deib.polimi.it}{21st ACM International Conference on Hybrid Systems: Computation and Control, 2018}, Porto, Portugal (2018). Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
@@ -536,7 +558,7 @@ Palabras clave: optimización estocástica, programación no lineal.
 
 \begin{itemize}
 	
-	\item[-]  Traducción y revisión en: \href{https://hal.archives-ouvertes.fr/hal-01646401}{\emph{Mathematical Computation with SageMath}} Alexandre Casamayou, Nathann Cohen, Guillaume Connan, Thierry Dumont, Laurent Fousse, et al.. En proceso de publicación.
+	\item[-]  \href{https://hal.archives-ouvertes.fr/hal-01646401}{\emph{Computational Mathematics with SageMath}} Alexandre Casamayou, Nathann Cohen, Guillaume Connan, Thierry Dumont, Laurent Fousse, et al. Traducción, revisión de texto y código. A publicarse por Society for Industrial and Applied Mathematics (SIAM, 2018).
 \end{itemize}
 
 \section{Presentaciones  orales y pósters (selección)}
@@ -609,6 +631,8 @@ Palabras clave: optimización estocástica, programación no lineal.
 
 \begin{itemize}
 
+	\item[-] \href{http://gm-rqw.imag.fr/}{Dynamic Days Latin America and the Caribbean}, Punta del Este, Uruguay, (2018). Miembro del local organizing committee.
+
 	\item[-] \href{http://gm-rqw.imag.fr/}{Meeting in Relativistic Quantum Walks}, Grenoble, France, (2014). Organización científica y material de la conferencia.
 
 	\item[-] II Reuni\'{o}n conjunta de la Sociedad Argentina de F\'{i}sica y de la Sociedad Uruguaya de F\'{i}sica, Montevideo, Uruguay (2011). Miembro del comité organizador.
@@ -621,14 +645,24 @@ Palabras clave: optimización estocástica, programación no lineal.
 \vspace{-0.75cm}
 
 \begin{itemize}
+
+\item[-] Organizaci\'{o}n del Ciclo de Charlas de la Ingenier\'{i}a en Energ\'{i}as Renovables (2018), Instituto T\'{e}cnico Regional Centro-Sur, UTEC Universidad Tecnol\'{o}gica.
+	
 \item[-] Hybrid Systems: Computation and Control (HSCC) Repeatability Evaluation Commitee Member (2016, 2017).
+
 \item[-] 20th International Federation of Automatic Control
-(IFAC) World Conference, Reviewer, 2017. 
-\item[-] Revisor en otras revistas científicas y conferencias: Computational Methods in Systems Biology (CMSB), Hybrid Systems Biology (HSB), Physica A: Statistical Mechanics and its Applications, Nature Scientific Reports, IEEE/ACM Transactions on Computational Biology and Bioinformatics.
+(IFAC) World Conference, Reviewer (2017). 
+
+\item[-] Revisor en varias revistas científicas y conferencias: Computational Methods in Systems Biology (CMSB), Hybrid Systems Biology (HSB), Physica A: Statistical Mechanics and its Applications, Nature Scientific Reports, IEEE/ACM Transactions on Computational Biology and Bioinformatics.
+
 \item[-] Miembro del jurado de tesis de grado en la Univ. ORT, Uruguay (2012) y en la Univ. de la Rep\'{u}blica, Uruguay (2010). 
+
 \item[-] Delegado estudiante del comit\'e de PEDECIBA F\'isica (2011-2012).
+
 \item[-] Miembro del comit\'e organizador de la Olimpiada Nacional de Fisica, Uruguay (2009-actual), y delegado de Uruguay en las OIbF en Granada, España (2013).
-\item[-] Colaborador del software de cálculo matemático open-source SageMath. 
+
+\item[-] Colaborador del software de cálculo matemático open-source \href{http://www.sagemath.org/}{SageMath}.
+
 \end{itemize}
 
 %\section{Idiomas}
