--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -335,7 +335,7 @@ Se interesa por establecer puentes entre la investigación teórica y sus aplica
 
 \blankline
 
-\href{https://ic.edu.uy/}{\textbf{Intenational College}}, Punta del Este, Uruguay
+\href{https://ic.edu.uy/}{\textbf{International College}}, Punta del Este, Uruguay
 \hfill\textbf{2018--actual}
 
 \begin{outerlist}
@@ -480,6 +480,7 @@ Palabras clave: optimización estocástica, programación no lineal.
 \vspace{-0.75cm}
 
 \begin{itemize}
+	\item[-] Investigador categorizado en el Sistema Nacional de Investigadores (\href{http://sni.org.uy}{SNI}), de la Agencia Nacional de Investigación Cientifica (\href{www.anii.org.uy/}{ANII}), en calidad de Iniciación, área Ciencias Naturales y Exactas (2018).
 	\item[-] Primer premio ``Most Promising Research Award'', con un premio de BOSCH, en el workshop Applied Verification for Continuous and Hybrid Systems (\href{https://cps-vo.org/group/ARCH}{ARCH}) del International Federation of Automatic Control (IFAC) conference on \href{https://www.cs.ox.ac.uk/conferences/ADHS18/}{Analysis and Design of Hybrid Systems}, Londres, UK (2018). 
 	\item[-] Beca de doctorado ``Allocations président pour des étudiants extérieurs d'excellence'' otorgado por la Universidad Joseph Fourier, Grenoble, Francia (2013-2015). 
 	\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
@@ -661,7 +662,7 @@ Palabras clave: optimización estocástica, programación no lineal.
 
 \item[-] Miembro del comit\'e organizador de la Olimpiada Nacional de Fisica, Uruguay (2009-actual), y delegado de Uruguay en las OIbF en Granada, España (2013).
 
-\item[-] Colaborador del software de cálculo matemático open-source \href{http://www.sagemath.org/}{SageMath}.
+\item[-] Contribución al desarrollo de software del sistema de cálculo matemático open-source \href{http://www.sagemath.org/}{SageMath}.
 
 \end{itemize}
 
