--- a/_posts/2018-01-25-gsoc-sage.md
+++ b/_posts/2018-01-25-gsoc-sage.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Mentor for Google Summer of Code 2018"
+title:  "SageMath Google Summer of Code 2018 Proposal"
 date: 2018-01-25
-categories: upcoming_event
+categories: past_event
 tags: sagemath
 ---
 
